# soropass

./: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: config.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/demo/: embed.html  index.html  onchain.html  package.json  playwright.config.ts  vercel.json  vite.config.ts
apps/demo/e2e/: passkey.spec.ts  screenshots.spec.ts
apps/demo/src/: demo.css  demoKit.ts  embed.ts  headlessHarness.ts  main.ts  onchain.ts  onchainDemo.ts
apps/docs/: api-reference.mdx  compatibility.mdx  demo.mdx  docs.json  introduction.mdx  package.json  passkey-module.mdx  quickstart.mdx  security.mdx  wallets-kit.mdx
apps/docs-fuma/: .gitignore  README.md  package.json  react-router.config.ts  vercel.json
apps/landing/: index.html  package.json  vercel.json  vite.config.js
apps/matrix/: astro.config.mjs  package.json  tsconfig.json  typedoc.json
apps/site/: .gitignore  index.html  package.json  vercel.json  vite.config.js
contracts/: README.md  deployments.json
contracts/account-factory/: Cargo.toml
contracts/account-factory/src/: lib.rs
contracts/webauthn-account/: Cargo.toml
docs/: compatibility.md
docs/integration/: README.md  stellar-wallets-kit.md
docs/matrix/: architecture.md  automation-coverage.md
docs/rfp/: decentralization-and-infra.md  license.md  maintenance.md  submission-pack.md  telemetry.md
docs/security/: onchain-verification.md  threat-model.md
docs/ui/: framework-decision.md
tools/ci/: package.json
(+144 files in other folders)
